some refactorings and optimizations

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,47 +7,49 @@
   cursor: pointer;
   margin: 0 auto;
   transition: transform 0.4s ease, opacity 1s ease;
+
+  .front,
+  .back {
+    cursor: pointer;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    overflow: hidden;
+    backface-visibility: hidden;
+    transition: transform 0.4s ease;
+
+    background: #c0c0c0;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .front {
+    transform: perspective(600px) rotateY(0deg);
+  }
+
+  .back {
+    transform: perspective(600px) rotateY(180deg);
+    background-color: #f1f1f1;
+  }
+
+  &.active > .front {
+    transform: perspective(600px) rotateY(-180deg);
+  }
+  &.active > .back {
+    transform: perspective(600px) rotateY(0deg);
+  }
 }
-.card.hide {
+
+.hide {
   transform: scale(0);
   opacity: 0;
 }
 
-.card.disabled {
+.disabled {
   opacity: 0.3;
-}
-
-.front,
-.back {
-  cursor: pointer;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  height: 100%;
-  overflow: hidden;
-  backface-visibility: hidden;
-  transition: transform 0.4s ease;
-
-  background: #c4c4c4;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.front {
-  transform: perspective(600px) rotateY(0deg);
-}
-
-.back {
-  transform: perspective(600px) rotateY(180deg);
-  background-color: #f1f1f1;
-}
-.card.active > .front {
-  transform: perspective(600px) rotateY(-180deg);
-}
-.card.active > .back {
-  transform: perspective(600px) rotateY(0deg);
 }
 
 @media screen and (max-width: 1000px) {
